feat: announcements api impl (#31)
* feat: announcements api impl

* fix: remvoed public modifier

* fix: sonar
